ajustando media query

--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="styles/defaut.css">
+    <link rel="stylesheet" href="styles/media-query.css">
 </head>
 <body>
     <main>
         <section id="login">
             <div id="imagem">
-
+                Foto
             </div>
 
             <div id="formulario">
@@ -19,7 +20,7 @@
                 <p>Seja bem-vindo(a) ao Super JABs e-Sports</p>
 
                 <form action="#" method="post">
-                    
+
                 </form>
             </div>
         </section>
