--- a/index.html
+++ b/index.html
@@ -4,23 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="styles/defaut.css">
     <link rel="stylesheet" href="styles/media-query.css">
 </head>
 <body>
     <main>
         <section id="login">
-            <div id="imagem">
-                Foto
-            </div>
+            <div id="imagem"></div>
 
             <div id="formulario">
                 <h1>Login</h1>
-
                 <p>Seja bem-vindo(a) ao Super JABs e-Sports</p>
 
-                <form action="#" method="post">
+                <form action="#" method="post" autocomplete="on">
 
+                    <div class="campo">
+                        <label for="ilogin">Login</label>
+                        <i class="material-icons">person</i>
+                        <input type="text" name="login" id="ilogin" placeholder="Digite seu login" autocomplete="nickname" required>
+                        
+                    </div>
+
+                    <div class="campo">
+                        <label for="isenha">Senha</label>
+                        <i class="material-icons">vpn_key</i>
+                        <input type="password" name="senha" id="isenha" placeholder="Digite sua senha" autocomplete="current-password" required minlength="6">
+                    </div>
+
+                    <input type="submit" value="Entrar">
+
+                    <a href="#" class="cadastro">Cadastrar agora</a>
+
+                    <a href="#" class="botao">Esqueci a senha</a>
+
+                    
                 </form>
             </div>
         </section>
