projeto-login jubs finalizado

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <main>
         <section id="login">
             <div id="imagem"></div>
-
+            
             <div id="formulario">
                 <h1>Login</h1>
-                <p>Seja bem-vindo(a) ao Super JABs e-Sports</p>
+                <p>Seja bem-vindo(a) ao JUBs e-Sports</p>
 
                 <form action="#" method="post" autocomplete="on">
 
